Removed href that was causing deep links to be overwritten

--- a/ll-baseball-card.html
+++ b/ll-baseball-card.html
@@ -50,7 +50,7 @@ Example:
   <template>
     <div class="baseballcard-container">
       <div class="thumbnail baseballcard">
-        <a href="#" id="image" class="img-link">
+        <a id="image" class="img-link">
           <ll-cog id="spinner" active></ll-cog>
         </a>
       </div>
