fixes problem where decenders on letters were being cut off

--- a/ll-baseball-card.html
+++ b/ll-baseball-card.html
@@ -40,8 +40,8 @@ Example:
       text-align: center;
       text-overflow: ellipsis;
       overflow: hidden;
-      margin: .5em 0;
-      padding: 0 1em;
+      margin: .0;
+      padding: .5em 1em;
     }
     .img {
       width: 100%;
